--- a/data/org.gnome.settings-daemon.plugins.gschema.xml.in.in
+++ b/data/org.gnome.settings-daemon.plugins.gschema.xml.in.in
@@ -12,6 +12,7 @@
     <child name="housekeeping" schema="org.gnome.settings-daemon.plugins.housekeeping"/>
     <child name="media-keys" schema="org.gnome.settings-daemon.plugins.media-keys"/>
     <child name="power" schema="org.gnome.settings-daemon.plugins.power"/>
+    <child name="updates" schema="org.gnome.settings-daemon.plugins.updates"/>
     <child name="xrandr" schema="org.gnome.settings-daemon.plugins.xrandr"/>
     <child name="xsettings" schema="org.gnome.settings-daemon.plugins.xsettings"/>
   </schema>
